
Changelog
=========

2018.4.6 (unreleased)
---------------------

- Only allow adding meeting templates, when meeting feature is enabled. [phgross]
- Ignore Tika exceptions during indexing in Solr. [buchi]


2018.4.5 (2018-09-24)
---------------------

- Fix task path queries for oracle backends. [phgross]
- Fix activity queries for oracle backends. [phgross]
- Split search terms at non-alphanumeric characters. [buchi]
- Bump Lucene version used in Solr to 7.3.1. [buchi]


2018.4.4 (2018-09-17)
---------------------

- Fix groubmembers overlay for groupids with spaces. [phgross]
- Add missing mimetype for wmf files. [phgross]
- Fix solr checked-in indexing problems. [phgross]
- Fix tree portlet header styling for IE11. [Kevin Bieri]
- Fix batching links on the solr search. [phgross]
- Register bmp as editable by officeconnector. [phgross]
- Fix global scoped "show more" links for SOLR livesearch [Rotonen]


2018.4.3 (2018-09-04)
---------------------

- Scale down size for logo wrapper, to have more space for personal menues. [phgross]
- Fix an encoding issue in an upgrade by no using model code. [deiferni]
- Fix double escaping of agendaitem title in meeting overview. [njohner]
- Fix handling of unidirectional by reference tasks in a sequential process. [phgross]


2018.4.2 (2018-08-30)
---------------------

- Make upgrade step 20180619143343 deferrable: Use of CMFEditions getHistory causes massive amounts of savepoints. [lgraf]


2018.4.1 (2018-08-30)
---------------------

- Revoke roles for former responsible when reassigning a task. [phgross]
- Fix notification when removing a proposal from a meeting schedule. [njohner]
- Pin ftw.table to 1.20.0, to fix a concurrency bug in tables. [njohner]
- Fix issue when commenting on a not submitted proposal. [phgross]
- Fix IE bug on the notification settings page. [phgross]
- Fix sharing view on committecontainer. [phgross]